Make conversion run on slurm nodes

--- a/.env_template
+++ b/.env_template
@@ -42,6 +42,10 @@ AWS_SECRET_ACCESS_KEY=
 AWS_REQUEST_CHECKSUM_CALCULATION=WHEN_REQUIRED
 AWS_RESPONSE_CHECKSUM_VALIDATION=WHEN_REQUIRED
 
+# For max number of concurrent jobs to run on slurm
+n_max_conversions=3
+check_interval=300
+
 # For messages to slack
 smtp_server=
 smtp_port=
