Conversion working on codon with jobs submitted to slurm

--- a/.env_template
+++ b/.env_template
@@ -12,6 +12,9 @@ persistence_mode=
 
 # API target for bia-assign-image commands. "local" or "prod"
 api_target=
+# Max number of studies to ingest - useful for testing
+N_TO_INGEST=1000
+
 
 # Max items for propose command (default is 5)
 max_items=5
@@ -46,10 +49,5 @@ AWS_RESPONSE_CHECKSUM_VALIDATION=WHEN_REQUIRED
 n_max_conversions=3
 check_interval=300
 
-# For messages to slack
-smtp_server=
-smtp_port=
-from=
-mail_username=
-mail_password=
+# For emails to address to be notified (BIA use bia-ingest-pipeline channel on slack)
 to=
